--- a/assets/style.css
+++ b/assets/style.css
@@ -7,26 +7,22 @@
   --very-light-gray: #fafafa;
   --white: #ffffff;
 }
-  
-  
-  .attribution { font-size: 11px; text-align: center; }
-  .attribution a { color: hsl(228, 45%, 44%); }
 
   /* Override default style and set padding and margin to nothing */
-
   * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
   }
-
   body {
   font-family: 'Public Sans', sans-serif;
   }
-
   a {
     color: var(--grayish-blue);
     text-decoration: none;
+  }
+  li {
+    list-style-type: none;
   }
 
   /* common elements */
@@ -34,44 +30,59 @@
     background-image: linear-gradient(to right, var(--lime-green), var(--bright-cyan));
     padding: 5px;
     border: none;
-    border-radius: 17px;
-    width: 130px;
-    height: 34px;
+    border-radius: 20px;
+    width: 150px;
+    height: 40px;
     font-weight: 700;
-    font-size: 12px;
+    font-size: 13px;
     color: var(--white);
   }
-
   p {
     color: var(--grayish-blue);
     font-size: 18px;
   }
-
   h2 {
     font-size: 45px;
     font-weight: 400;
     color: var(--dark-blue);
   }
-
   h3 {
     font-size: 30px;
     font-weight: 400;
     color: var(--dark-blue);
   }
+  .container {
+    margin: 0 auto;
+    max-width: 1440px;
+    overflow: visible;
+    padding: 0 100px;
+  }
 
-  /* img {
-    width: 100%;
-  } */
-
-  li {
-    list-style-type: none;
+  /* navbar */
+  .navbar {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    height: 100%;
+  }
+  .flex, ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  nav li a {
+    margin: 0 20px 0 20px;
+    padding: 25px 0 25px 0;
+  }
+  .navbar ul li a:hover {
+    border-bottom: 4px solid;
+    border-image: linear-gradient(to right, var(--lime-green), var(--bright-cyan));
+    border-image-slice: 1;
   }
 
   /* hero section */
   .hero-section {
     background-color: var(--very-light-gray);
   }
-
   .value-title {
     font-size: 22px;
     font-weight: 400;
@@ -100,7 +111,7 @@
   }
 
   /* latestt articles section */
-  .articles-list {
+  .articles-section {
     background-color: var(--very-light-gray);
   }
 
